--- a/example-configs/advanced/fail2ban-relay-config.json
+++ b/example-configs/advanced/fail2ban-relay-config.json
@@ -8,7 +8,7 @@
     "nodeosUrl": "localhost",
     "nodeosPort": "8888",
 
-    "contractBlackList": {
+    "contractWhiteList": {
         "currency": true
     },
     "maxSignatures": 10,
